--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "icpc2t",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=16.x <=20.x"
+  },
   "scripts": {
     "server": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -16,14 +19,14 @@
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "@babel/eslint-parser": "^7.17.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-template-compiler": "^2.7.16"
   },
   "eslintConfig": {
     "root": true,
@@ -35,7 +38,8 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser",
+      "requireConfigFile": false
     },
     "rules": {}
   },
